--- a/assets/css/template.css
+++ b/assets/css/template.css
@@ -188,3 +188,386 @@ nav a:hover {
 
     border-bottom: 1px solid #b7afb1;
 }
+
+/* ALINHA O CONTAINER AO CENTRO */
+#geral {
+    display: flex;
+    justify-content: center;
+}
+
+/* DEFININDO O TAMANHO - SECTION E ASIDE */
+#geral section {
+    flex: 2;
+}
+
+#geral aside {
+    flex: 1;
+}
+
+
+/* ÁREA QUE TEM UM TÍTULO + LINHA ABAIXO */
+
+.widget-title {
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
+
+.widget-title-text {
+    color: #000;
+    font-size: 21px;
+    font-weight: bold;
+}
+
+.widget-title-bar {
+    width: 50px;
+    height: 2px;
+    background-color: #36a9e1;
+    margin-top: 10px;
+}
+
+
+/* COLOCA AS NOTÍCIAS QUE ESTÃO NO "widget-body" LADO A LADO */
+.flex {
+    display: flex;
+
+    /* QUEBRA DE LINHA - PERMITE APENAS 2 NOTÍCIAS POR LINHA */
+    flex-wrap: wrap;
+
+}
+
+/* INDICA QUE TODAS AS NOTÍCIAS SERÃO DO MESMO TAMANHO */
+article {
+    flex: 1;
+
+    /* NECESSÁRIO PARA O WRAP ACONTECER - DEFINIR TAMANHO PADRÃO - DESSA FORMA JÁ FICA RESPONSIVO */
+    min-width: 300px;
+
+    /* DÁ UM RESPIRO NAS NOTÍCIAS */
+    margin-right: 20px;
+}
+
+
+/* NOTÍCIAS */
+
+article a {
+    text-decoration: none;
+}
+
+
+/* DATA POSTAGEM E QTD DE COMENTÁRIOS */
+article .news-data {
+    display: flex;
+}
+
+article .news-posted-at {
+    background-color: #2b4c99;
+    color: #fff;
+    font-size: 12px;
+    padding: 10px;
+    margin-right: 2px;
+}
+
+article .news-comments {
+    background-color: #39aae1;
+    color: #fff;
+    font-size: 12px;
+    padding: 10px;
+}
+
+
+/* FOTO NOTÍCIA */
+
+article .news-thumbnail {
+    margin-top: 30px;
+}
+
+article .news-thumbnail img {
+    width: 100%;
+    height: auto;
+}
+
+/* TÍTULO DA NOTÍCIA */
+
+article .news-title {
+    margin-top: 25px;
+    margin-bottom: 25px;
+    color: #000;
+    font-size: 23px;
+}
+
+/* NOTÍCIA */
+
+article .news-resume {
+    color: #5c5c5c;
+    line-height: 20px;
+    font-size: 14px;
+    margin-bottom: 30px;
+}
+
+
+/* DEPARTMENTS - DEPARTAMENTOS */
+
+aside a {
+    text-decoration: none;
+}
+
+/*  DEIXA UM ESPAÇO ENTRE OS DEPARTAMENTOS */
+.widget .widget-body {
+    justify-content: space-between;
+}
+
+/* INDICA QUE TODOS OS DEPARTAMENTOS SERÃO DO MESMO TAMANHO */
+.departments-all {
+
+    flex: 1;
+
+    /* NECESSÁRIO PARA O WRAP ACONTECER - DEFINIR TAMANHO PADRÃO - DESSA FORMA JÁ FICA RESPONSIVO */
+    min-width: 150px;
+
+    /* DÁ UM RESPIRO NAS NOTÍCIAS */
+    margin-bottom: 20px;
+}
+
+/* INDICA QUE O TAMANHO DO DEPARTAMENTO OCUPARÁ 100% DA ÁREA COM 180PX DE ALTURA */
+.departments-item {
+    width: 100%;
+    height: 180px;
+    background-color: #11B0DA;
+}
+
+
+
+
+/* APPOITMENT */
+
+.widget-body .appoitment {
+    margin-bottom: 20px;
+}
+
+.contact {
+    padding: 20px 0;
+    border-top: 1px solid #e0e0e0;
+    border-bottom: 1px solid #e0e0e0;
+}
+
+.contact a {
+    color: #3156c5;
+}
+
+
+
+/* RODAPÉ */
+footer {
+    background-color: #1e1e1e;
+
+    /* ALINHA O CONTEÚDO AO CENTRO */
+    display: flex;
+    justify-content: center;
+}
+
+
+.column {
+    flex-direction: column;
+}
+
+
+.footer-menu {
+    display: flex;
+}
+
+
+/* PEGA TODA ÁREA DISPONÍVEL NO FOOTER-MENU E DIVIDE POR 3 */
+.fm-1,
+.fm-2,
+.fm-3 {
+    flex: 1;
+    color: #fff;
+    padding: 20px;
+}
+
+.fm-1 p,
+.fm-2 p,
+.fm-3 p {
+    font-size: 14px;
+}
+
+.fm-1 {
+    background-color: #39aae1;
+}
+
+.fm-2 {
+    background-color: #0079c7;
+}
+
+.fm-3 {
+    background-color: #2b4c99;
+}
+
+
+.footer-area {
+    display: flex;
+}
+
+
+/* DEFINE TAMANHO IGUAL PARA TODOS OS ITEM COM BASE NO ESPAÇO DISPONÍVEL */
+.footer-areaitem {
+    flex: 1;
+    color: #fff;
+}
+
+footer .widget-title-text {
+    color: #fff;
+}
+
+
+footer .widget-body {
+    margin-bottom: 20px;
+    padding: 10px 20px 0 0;
+    line-height: 22px;
+}
+
+
+footer .widget-text {
+    font-size: 14px;
+    color: #636363;
+}
+
+.widget-body .flex {
+    justify-content: space-between;
+}
+
+.widget-text div {
+    flex: 1;
+}
+
+footer .color-gray {
+    color: #d5d5d5;
+}
+
+.post-time {
+    color: #3578e5;
+    font-size: 12px;
+}
+
+footer .social-media {
+    margin-top: 40px;
+    cursor: pointer;
+}
+
+
+footer i {
+    background-color: #2c2c2c;
+    padding: 10px;
+    font-size: 24px;
+}
+
+
+.footer-copy {
+    border-top: 1px solid #2c2c2c;
+    height: 40px;
+    line-height: 40px;
+    color: #5c5c5c;
+    font-size: 12px;
+    margin-top: 30px;
+}
+
+
+/* MENU MOBILE */
+
+.menu-mobile {
+    display: none;
+    width: 40px;
+    height: 40px;
+
+    margin-top: 40px;
+    margin-bottom: 40px;
+    margin-right: 20px;
+}
+
+.mm-line {
+    height: 3px;
+    background-color: #39aae1;
+}
+
+
+@media (max-width: 600px) {
+
+    header .container {
+        flex-direction: row;
+    }
+
+    header {
+        height: auto;
+    }
+
+    .logo {
+        padding-left: 20px;
+    }
+
+    /* MENU MOBILE */
+    .menu-mobile {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+    }
+
+
+    nav ul {
+        flex-direction: column;
+        display: none;
+        position: absolute;
+        left: 0;
+        width: 100%;
+        background-color: #fff;
+    }
+
+
+    .banner_headline {
+        padding: 20px;
+    }
+
+    .banner_headline h1 {
+        font-size: 55px;
+    }
+
+    .banner_headline h2 {
+        font-size: 17px;
+    }
+
+
+    .banner_options {
+        /* ALTURA AUTOMÁTICA EVITA QUE OS ELEMENTOS SOBRESSAIAM E ADEQUA O CONTEÚDO */
+        height: auto;
+        flex-direction: column;
+    }
+
+
+    section .widget .widget-title {
+        padding-top: 20px;
+    }
+
+
+    .container {
+        flex-direction: column;
+    }
+
+    #geral section,
+    #geral aside {
+        padding: 20px;
+    }
+
+
+    .footer-menu {
+        flex-direction: column;
+    }
+
+    .footer-area {
+        flex-direction: column;
+        padding: 20px;
+    }
+
+    .footer-copy {
+        padding-left: 20px;
+    }
+
+}
